Sort of a rollback on the "grid centered" fix with the previous commit. It does appear to be fairly well centered (by hand and eye, at least) now AND the content in the grid is no longer being misaligned as an iatrogenic result of fixing the grid placement! Next up will likely be pagination. Though it won't be too useful without having all seasons fetched when getting episode lists. Likely best approach to simplify their combination into one feature is to the state-saved episodes by season. We will also be able to reduce api call by one per show name lock-in. Although, bringing in all X seasons does increase it further than before. Nonetheless, we will assume a show has a first season and grab that first, the resulting response will include total seasons count for us to instantiate the state variable with (instead of the current approach).

--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -89,6 +89,6 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 }
 
 .form-group-box {
-  margin-left: -11.25%; // NOTE: This is honestly evil in just how close to perfection it is with current viewport sizing...
+  margin-left: -11.23%; // NOTE: This is honestly evil in just how close to perfection it is with current viewport sizing...
   // Continued: Eventually, I will need to revisit here and do this the right way. (Aligning label for show lock checkbox with label in row above it)
 }
